# quick-arch

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  evaluator.rs  generator.rs  main.rs  ui.rs
template/: fastapi.json  flutter.json  frontend.json  rust.json
