[package]
name = "quick-arch"
version = "0.1.0"
edition = "2024"
description = "powerful CLI tool built in Rust that automates project scaffolding using JSON templates. Generate complete project structures with conditional features in seconds!"
authors = ["Abdullah Abdulkhaleq"]
license = "MIT"
repository = "https://github.com/AbdullahNamespace/quick-arch"
homepage = "https://github.com/AbdullahNamespace/quick-arch"
documentation = "https://docs.rs/quick-arch"
readme = "README.md"
keywords = [
    "scaffolding",
    "project",
    "template",
    "architecture",
    "generator",
    "cli",
]
categories = ["command-line-utilities", "development-tools", "template-engine"]

[[bin]]
name = "quick-arch"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
